<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvAlert"
        android:padding="20dp"
        android:id="@+id/tvAlert"
        android:textSize="40sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/btnToast"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"
        android:background="@color/black"/>
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity"
    android:orientation="vertical"
        android:gravity="center">
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/btnToast"
        android:textColorHint="@color/white"
        android:id="@+id/btnToast"
        app:layout_constraintBottom_toTopOf="@id/btnSnackbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAlert"
        android:layout_gravity="center"
        android:backgroundTint="@color/black"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/btnSnackbar"
        android:textColorHint="@color/white"
        android:id="@+id/btnSnackbar"
        app:layout_constraintBottom_toTopOf="@id/btnalertDialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnToast"
        android:layout_gravity="center"
        android:backgroundTint="@color/black"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/btnDialog"
        android:textColorHint="@color/white"
        android:id="@+id/btnalertDialog"
        app:layout_constraintBottom_toTopOf="@id/btnCoustomDialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnSnackbar"
        android:layout_gravity="center"
        android:backgroundTint="@color/black"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/btnCoustomDialog"
        android:textColorHint="@color/white"
        android:id="@+id/btnCoustomDialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnalertDialog"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"/>

    </LinearLayout>
</LinearLayout>